# gtensor

./: .clang-format  CMakeLists.txt  LICENSE  README.md  gtensor-config.cmake.in  run-gtests.sh  test-no-thrust.sh  test.sh
.github/workflows/: ccpp.yml  clang-format.yml  sycl.yml
benchmarks/: CMakeLists.txt  bench_assign.cxx  bench_fft.cxx  bench_getrf.cxx  bench_getri.cxx  bench_hypz.cxx  bench_kernels.cxx  bench_solver.cxx  bench_sparse.cxx  bench_stencil1d.cxx  getrs.cxx  gt-bm.h  ij_deriv.cxx  stencil.cxx
ci/jlse/: sycl-test-run.sh
cmake/: FindFFTW.cmake  target-gtensor-sources-macro.cmake
examples/: CMakeLists.txt  Makefile
examples/src/: c_test_fortran.cxx  daxpy.cxx  gtblas_axpy.cxx  mult_table.cxx  snippets.cxx  stencil1d.cxx  test_fortran.F90  trig.cu  trig_adapted.cxx
include/gt-blas/: bandsolver.h  blas.h  cblas.h
include/gt-blas/backend/: cuda.h  hip.h  host.h  sycl.h
include/gt-fft/: cfft.h  fft.h
include/gt-fft/backend/: bbfft.h  cuda.h  fftw_inc.h  hip.h  host.h  sycl.h
include/gt-solver/: solver.h
include/gt-solver/backend/: cuda-bsrsm2.h  cuda-csrsm2.h  cuda-generic.h  cuda.h  cuda2.h  hip-csrsm2.h  hip-generic.h  hip.h  host.h  sycl.h
include/gtensor/: allocator.h  assign.h  backend_common.h  backend_cuda.h  backend_hip.h  backend_host.h  backend_sycl.h  backend_sycl_compat.h  backend_sycl_device.h  backend_thrust.h  bandsolver.h  bfloat16_t.h  blas.h  capi.h  cblas.h  cfft.h  complex.h  complex_bfloat16_t.h  complex_float16_t.h  complex_ops.h  defs.h  device_backend.h  device_copy.h  device_ptr.h  device_runtime.h  expression.h  fft.h  float16_t.h  fortran.h  gcontainer.h  gfunction.h  gpublas.h  gpufft.h  gscalar.h  gslice.h  gstrided.h  gtensor.h  gtensor_forward.h  gtensor_span.h  gtensor_storage.h  (+26 more)
include/gtensor/blas/: cuda.h  hip.h  sycl.h
include/gtensor/fft/: cuda.h  hip.h  sycl.h
include/gtensor/fortran/: flcl.h
include/thrust/detail/allocator/: default_construct_range.inl  destroy_range.inl
src/: cgtblas.cxx  cgtensor.cxx  cgtfft.cxx  gpublas.cxx  gpufft.cxx  gtsolver.cxx
src/fortran/: gpu_api.cxx  gpu_api_interface.F90
tests/: CMakeLists.txt  gtest_predicates.h  test_adapt.cxx  test_assign.cxx  test_bandsolver.cxx  test_bfloat16_t.cxx  test_blas.cxx  test_cblas.cxx  test_cfft.cxx  test_clib.cxx  test_complex.cxx  test_complex_bfloat16_t.cxx  test_complex_float16_t.cxx  test_debug.h  test_device_backend.cxx  test_device_ptr.cxx  test_expression.cxx  test_fft.cxx  test_float16_t.cxx  test_gtensor.cxx  test_gtensor_span.cxx  test_gtensor_storage.cxx  test_gtensor_view.cxx  test_gtest_predicates.cxx  test_half.cxx  test_half_failing.cxx  test_helper.cxx  test_helpers.h  test_lapack.cxx  test_launch.cxx  test_mxp.cxx  test_mxp_helper.h  test_mxp_truncated_mantissa_t.cxx  test_reductions.cxx  test_sarray.cxx  test_solver.cxx  test_space.cxx  test_span.cxx  test_sparse.cxx  test_stream.cxx  (+3 more)
